<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/holo_blue_dark">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@android:color/holo_blue_dark"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="125px"
            android:background="@android:color/darker_gray"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25px"
                android:layout_weight="1"
                android:gravity="left"
                android:paddingLeft="25px"
                android:text="San Francisco Crime Locations"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25px"
                android:layout_weight="1"
                android:gravity="right"
                android:onClick="changeTitle"
                android:paddingRight="20px"
                android:text="+"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Pagination Settings"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Set Limit"
                    android:textColor="@android:color/white" />

                <EditText
                    android:id="@+id/limit"
                    android:layout_width="120px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Set Offset"
                    android:textColor="@android:color/white" />

                <EditText
                    android:id="@+id/offset"
                    android:layout_width="135px"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"
                    android:inputType="number" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10px"

            >

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"

                android:onClick="showBurglaryLocations"
                android:text="@string/Showburglarylocations" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="showTheftLocations"
                android:text="@string/showTheftLocations" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="showNonCriminalLocations"
                android:text="@string/showNonCriminalLocations" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"

                android:onClick="showOtherOffensesLocations"
                android:text="@string/showOtherOffensesLocations" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"

                android:onClick="showVandalismLocations"
                android:text="@string/showVandalismLocations" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"

                android:onClick="showAssaultLocations"
                android:text="@string/showAssaultLocations" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"

                android:onClick="showVehicleTheftLocations"
                android:text="@string/showVehicleTheftLocations" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"

                android:onClick="showMissingPersonLocations"
                android:text="@string/showMissingPersonLocations" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
